2023-11-27T16:17:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7007782249 # 2119
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-27
* notice: last 14d: unq all: 38 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1373 3289 / 1424 3360
* notice: next accum: outdated-unq outdated-all / unq all: 1374 3290 / 1425 3362
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-11-13] / [2023-11-27]

2023-11-27T08:17:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7002318130 # 2118
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-27
* notice: last 14d: unq all: 39 71
* notice: prev accum: outdated-unq outdated-all / unq all: 1373 3289 / 1423 3359
* notice: next accum: outdated-unq outdated-all / unq all: 1373 3289 / 1424 3360
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-27]

2023-11-26T16:15:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6996670545 # 2116
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-26
* notice: last 14d: unq all: 39 70
* notice: prev accum: outdated-unq outdated-all / unq all: 1373 3289 / 1422 3358
* notice: next accum: outdated-unq outdated-all / unq all: 1373 3289 / 1423 3359
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-26]

2023-11-26T01:03:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6992475698 # 2114