@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-27T16:17:45Z",
+  "timestamp" : "2023-11-28T08:17:19Z",
   "count_outdated" : 3290,
   "uniques_outdated" : 1374,
-  "count" : 3362,
-  "uniques" : 1425,
+  "count" : 3363,
+  "uniques" : 1426,
   "clones" : [
     {
       "timestamp": "2023-11-18T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
