@@ -1,5 +1,5 @@
 {
-  "count": 72,
+  "count": 73,
   "uniques": 38,
   "clones": [
     {
@@ -51,6 +51,11 @@
       "timestamp": "2023-11-27T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-28T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
