@@ -1,3 +1,12 @@
+2023-11-28T08:17:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7015958206 # 2121
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-28
+* notice: last 14d: unq all: 38 73
+* notice: prev accum: outdated-unq outdated-all / unq all: 1374 3290 / 1425 3362
+* notice: next accum: outdated-unq outdated-all / unq all: 1374 3290 / 1426 3363
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-11-28]
+
 2023-11-27T16:17:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7007782249 # 2119
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-27
